src/test/deca/context/invalid/BadExtends.deca
class A extends A{
    String chaine;
}